--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 out/
 *.gpkg
 *.mkv
-*.tif
 blender-3.6.9-linux-x64/
 __pycache__/
+*.tsv
+*.csv
+*.blend
+*.blend1
+*.mp4
+out/
+*.gpkg
+*.mkv
+*.tif
